spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,12 @@ h1 {
 }
 
 h2 {
-  @apply text-slate-800 italic text-2xl mb-4 font-bold;
+  @apply text-slate-700 italic text-2xl mb-4 font-bold;
 }
 
 h3 {
-  @apply text-slate-900 font-bold text-xl;
+  font-weight: 500;
+  @apply text-slate-700 text-xl;
 }
 
 p {
